--- a/WolvenKit/Views/HomePage/Pages/WelcomePageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/WelcomePageView.xaml
@@ -3,13 +3,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:catel="http://schemas.catelproject.com"
+    xmlns:feather="clr-namespace:Feather.Controls;assembly=Feather.Controls"
     xmlns:ffme="clr-namespace:Unosquare.FFME;assembly=ffme.win"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
     xmlns:sync="using:Syncfusion.UI.Xaml.Controls.Barcode"
     xmlns:sync1="clr-namespace:Syncfusion.UI.Xaml.Controls.Barcode;assembly=Syncfusion.SfBarcode.WPF"
-    xmlns:syncfusion="http://schemas.syncfusion.com/wpf">
+    xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+    xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf">
     <catel:UserControl.Resources>
         <ResourceDictionary>
             <DrawingBrush
@@ -216,7 +218,7 @@
         Margin="0">
         <Grid.RowDefinitions>
             <RowDefinition Height="4*" />
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="3*" />
             <RowDefinition Height="4*" />
         </Grid.RowDefinitions>
 
@@ -233,8 +235,6 @@
                         BorderBrush="{DynamicResource ContentBackgroundAlt}"
                         BorderThickness="0">
                         <StackPanel VerticalAlignment="top">
-
-
 
                             <StackPanel
                                 Margin="0,5,0,0"
@@ -287,10 +287,8 @@
                                 LightBarBrush="{DynamicResource MahApps.Brushes.Accent4}"
                                 Symbology="QRBarcode"
                                 Text="http://www.syncfusion.com" />
-
                         </StackPanel>
                     </Border>
-
                 </Grid>
             </Grid>
 
@@ -582,7 +580,71 @@
             </Grid>
         </Grid>
 
-        <Grid Grid.Row="1" Background="{DynamicResource ContentBackgroundAlt}" />
+        <Grid
+            x:Name="HeighBinder"
+            Grid.Row="1"
+            HorizontalAlignment="Stretch"
+            Background="{DynamicResource ContentBackgroundAlt2}">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <Border
+                x:Name="lokz"
+                Margin="0,5,0,25"
+                Background="{DynamicResource ContentBackgroundAlt2}"
+                BorderBrush="{DynamicResource ContentBackgroundAlt}"
+                BorderThickness="3"
+                CornerRadius="2">
+
+                <StackPanel>
+                    <TextBlock Text="  Featured Wolvenkit Guide!" />
+                    <wv2:WebView2
+                        Width="auto"
+                        Height="{Binding ElementName=lokz, Path=ActualHeight}"
+                        Margin="0"
+                        Source="https://www.youtube.com/embed/be6G9yxMKkY" />
+                </StackPanel>
+            </Border>
+
+            <Border
+                Grid.Column="1"
+                Margin="0,5,0,25"
+                Background="{DynamicResource ContentBackgroundAlt2}"
+                BorderBrush="{DynamicResource ContentBackgroundAlt}"
+                BorderThickness="3"
+                CornerRadius="2">
+
+                <StackPanel>
+                    <TextBlock Text="  Featured Wolvenkit Guide!" />
+                    <wv2:WebView2
+                        Width="auto"
+                        Height="{Binding ElementName=lokz, Path=ActualHeight}"
+                        Margin="0"
+                        Source="https://www.youtube.com/embed/e1up_pAP_U8" />
+                </StackPanel>
+            </Border>
+            <Border
+                Grid.Column="2"
+                Margin="0,5,0,25"
+                Background="{DynamicResource ContentBackgroundAlt2}"
+                BorderBrush="{DynamicResource ContentBackgroundAlt}"
+                BorderThickness="3"
+                CornerRadius="2">
+
+                <StackPanel>
+                    <TextBlock Text="  Featured Wolvenkit Guide!" />
+                    <wv2:WebView2
+                        Width="auto"
+                        Height="{Binding ElementName=lokz, Path=ActualHeight}"
+                        Margin="0"
+                        Source="https://www.youtube.com/embed/NOR36H4fDhg" />
+                </StackPanel>
+            </Border>
+        </Grid>
 
         <Grid Grid.Row="2" Background="{DynamicResource ContentBackgroundAlt2}">
             <StackPanel Margin="5,8,32,5" Orientation="Horizontal">
