453 feature assetbrowser overhaul (#489)
* Icon fixes , AB Slightly faster I think? :D

* ab stuff

* Fix Build

* rename and item caching in ArchiveManagers

* refactor AB

- disable propertiesView previews when hidden
- refactor AB itemssources

* faster loading

* fix console function interface

* Shell Overhaul

* Fix Catfact Crash if server is dead.
Fix StatusBarSize

* SearchStuff

* Search Delay

* Update WolvenKitArchiveManager.cs

* working back button

* use a treegrid :(

* fix AssetBrowserViewModel init

* Noice

* Icon Fix

* Bunch O fixes

* Fix

* Small Fix regarding previews

* PE Context Menu  Fixed

* Search bar  Project Explorer

* PE search prep

* Quick fix

* working asset browser left nav search

* working project explorer search

* HomePage Changes

* Hide TW3 option

* Clean up settings

* Hide Tw3 from settings

* Collapse Tools for now.

* Fix Path

* Fix more paths

* fix AB right context menu

* fix packing

* fix settings binding

* Webview Fix AppData

* Clean Webview Fix

* Clean Mesh Paths

* fix fuzzo :kek

* revert a change

* fix archive loading, move archive cache to appdata

* Homepage etc

Co-authored-by: R503B <sodanak1n@outlook.com>

--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -16,6 +16,9 @@
  xmlns:shared="clr-namespace:Syncfusion.Windows.Shared;assembly=Syncfusion.Shared.WPF"
  xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
  xmlns:views1="clr-namespace:WolvenKit.MVVM.Views.Shell.Backstage"
+                                                      Panel.ZIndex="-15"
+    Margin="0,33,0,0"
+
  >
 
     <!--  Resources  -->
@@ -193,7 +196,7 @@
                             <!--  Add selected Items(s) to Project Button  -->
                             <syncfusion:RibbonButton
                              x:Name="AddSelectedItems"
-                             Click="AddSelectedItems_Click"
+                             Command="{Binding AssetBrowserAddCommand}"
                              IconStretch="Fill"
                              IconType="Icon"
                              Label="Add selected Item(s) to Project"
@@ -1719,7 +1722,7 @@
         <StackPanel
          Width="auto"
          Height="20"
-         Margin="75,-21,0,0"
+         Margin="75,-22,0,0"
          HorizontalAlignment="Left"
          VerticalAlignment="Top"
          Orientation="Horizontal"
@@ -1729,7 +1732,7 @@
         <Border
          Width="70"
          Height="30"
-         Margin="0,-25,0,0"
+         Margin="0,-30,0,0"
          HorizontalAlignment="Left"
          VerticalAlignment="top"
          Background="{DynamicResource ContentBackgroundAlt2}"
