--- a/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
+++ b/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
@@ -31,18 +31,18 @@
             <converters1:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
         </Grid.Resources>
 
-
-
         <syncfusion:SfTreeGrid
             Name="TreeGrid"
             AllowEditing="False"
-            AllowFiltering="True"
+            AllowFiltering="False"
+            FilterLevel="Extended"
             AllowResizingColumns="False"
             AutoExpandMode="AllNodesExpanded"
             AutoGenerateColumns="False"
             ChildPropertyName="ParentHash"
             ColumnSizer="Star"
             ExpandStateMappingName="IsExpanded"
+            IsReadOnly="True"
             ItemsSource="{Binding BindGrid1, Mode=OneWay}"
             LiveNodeUpdateMode="AllowDataShaping"
             ParentPropertyName="Hash"
@@ -50,9 +50,7 @@
             SelectedItem="{Binding SelectedItem}"
             SelectedItems="{Binding SelectedItems}"
             SelectionMode="Extended"
-            SelfRelationRootValue="0"
-            IsReadOnly="True"
-            >
+            SelfRelationRootValue="0">
 
             <syncfusion:SfTreeGrid.Resources>
                 <Style TargetType="syncfusion:TreeGridCell">
@@ -85,7 +83,9 @@
                 <syncfusion:TreeGridTextColumn
                     HeaderText="Name"
                     HorizontalHeaderContentAlignment="Left"
-                    MappingName="Name">
+                    MappingName="Name"
+                    ImmediateUpdateColumnFilter="True"
+                >
                     <syncfusion:TreeGridTextColumn.CellTemplate>
                         <DataTemplate>
                             <Grid>
@@ -758,14 +758,6 @@
                                         </Style>
                                     </Image.Style>
                                 </Image>
-
-                                <!--<svgc:SvgViewbox
-                                 Width="12"
-                                 Height="12"
-                                 Margin="0"
-                                 Source="{Binding Extension, Converter={StaticResource ExtensionToBmp}, TargetNullValue=}"
-                                 Stretch="Uniform"
-                                 />-->
                                 <TextBlock
                                     x:Name="TemplateTextBlock"
                                     Grid.Column="1"
@@ -791,8 +783,6 @@
                         <MenuItem Command="{Binding RenameFileCommand}" Header="Rename" />
                     </MenuItem>
 
-                    <Separator Margin="-15" />
-
                     <MenuItem Margin="0" Header="Actions">
 
                         <MenuItem Command="{Binding AddAllImportsCommand}" Header="Add all dependencies" />
@@ -801,21 +791,30 @@
                     <MenuItem Header="Export selected - Simple" />
                     <MenuItem Header="Export selected - Advanced" />
 
-                    <Separator Margin="-15" />
-
-                    <Separator Margin="-15" />
                     <MenuItem Command="{Binding CopyRelPathCommand}" Header="Copy relative path" />
                     <MenuItem Command="{Binding OpenInFileExplorerCommand}" Header="Open in File Explorer" />
                     <MenuItem Command="{Binding OpenInAssetBrowserCommand}" Header="Open in asset browser" />
-                    <Separator Margin="-15" />
 
-                    <Separator Margin="-15" />
-                    <MenuItem Click="ExpandChildren_OnClick" Header="Expand children" />
-                    <MenuItem Click="CollapseChildren_OnClick" Header="Collapse children" />
+                    <MenuItem Click="ExpandChildren_OnClick" Header="Expand" />
+                    <MenuItem Click="CollapseChildren_OnClick" Header="Collapse" />
                     <MenuItem Click="ExpandAll_OnClick" Header="Expand all" />
                     <MenuItem Click="CollapseAll_OnClick" Header="Collapse all" />
                 </ContextMenu>
             </syncfusion:SfTreeGrid.ContextMenu>
+
         </syncfusion:SfTreeGrid>
+
+        <hc:SearchBar
+            x:Name="PESearchBar"
+            Margin="0,0,0,0"
+            VerticalAlignment="Top"
+            Background="{DynamicResource ContentBackground}"
+            BorderBrush="{DynamicResource BorderBrush}"
+            FlowDirection="LeftToRight"
+            Text="search"
+            SearchStarted="PESearchBar_OnSearchStarted"
+            ShowClearButton="True"
+            >
+        </hc:SearchBar>
     </Grid>
 </catel:UserControl>
