--- a/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
@@ -1,88 +1,27 @@
 <catel:UserControl
- x:Class="WolvenKit.Views.HomePage.Pages.SettingsPageView"
- xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
- xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:catel="http://schemas.catelproject.com"
- xmlns:feather="clr-namespace:Feather.Controls;assembly=Feather.Controls"
- xmlns:hc="https://handyorg.github.io/handycontrol"
- xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
- xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
- xmlns:sp="clr-namespace:WolvenKit.Views.HomePage.Pages"
- xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
- xmlns:ucontrols="clr-namespace:WolvenKit.Controls;assembly=WolvenKit.App"
- >
+    x:Class="WolvenKit.Views.HomePage.Pages.SettingsPageView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:catel="http://schemas.catelproject.com"
+    xmlns:feather="clr-namespace:Feather.Controls;assembly=Feather.Controls"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+    xmlns:sp="clr-namespace:WolvenKit.Views.HomePage.Pages"
+    xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+    xmlns:ucontrols="clr-namespace:WolvenKit.Controls;assembly=WolvenKit.App">
     <catel:UserControl.Resources>
         <Style TargetType="CheckBox">
-            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="HorizontalAlignment" Value="Left" />
         </Style>
     </catel:UserControl.Resources>
 
     <Grid
-     MinWidth="300"
-     MinHeight="300"
-     hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"
-     Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
-     >
+        MinWidth="300"
+        MinHeight="300"
+        hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"
+        Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
         <Grid x:Name="settingsGrid" Margin="3,75,3,0">
-            <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
-
-                <hc:TabControl
-                 x:Name="TabControlDemo"
-                 Margin="0,0,0,0"
-                 IsAnimationEnabled="True"
-                 IsDraggable="False"
-                 IsTabFillEnabled="True"
-                 SelectionChanged="TabControlDemo_SelectionChanged"
-                 ShowCloseButton="False"
-                 >
-                    <hc:TabItem x:Name="GeneralTabItem" IsSelected="True">
-                        <hc:TabItem.Header>
-                            <StackPanel Orientation="Horizontal">
-                                <iconPacks:PackIconCodicons Kind="VM" />
-                                <TextBlock Margin="10,0,0,0" Text="General" />
-                            </StackPanel>
-                        </hc:TabItem.Header>
-                        <sp:GeneralSettingsView />
-                    </hc:TabItem>
-
-                    <hc:TabItem x:Name="ToolsTabItems" IsSelected="True">
-                        <hc:TabItem.Header>
-                            <StackPanel Orientation="Horizontal">
-                                <iconPacks:PackIconCodicons Kind="Code" />
-                                <TextBlock Margin="10,0,0,0" Text="Tools" />
-                            </StackPanel>
-                        </hc:TabItem.Header>
-                        <sp:ToolSettingsView />
-                    </hc:TabItem>
-                    <hc:TabItem x:Name="EditorTabItem" IsSelected="True">
-                        <hc:TabItem.Header>
-                            <StackPanel Orientation="Horizontal">
-                                <iconPacks:PackIconCodicons Kind="Code" />
-                                <TextBlock Margin="10,0,0,0" Text="Editor" />
-                            </StackPanel>
-                        </hc:TabItem.Header>
-                        <sp:EditorSettingsView />
-                    </hc:TabItem>
-                    <hc:TabItem x:Name="PackagingTabItem" IsSelected="True">
-                        <hc:TabItem.Header>
-                            <StackPanel Orientation="Horizontal">
-                                <iconPacks:PackIconCodicons Kind="Code" />
-                                <TextBlock Margin="10,0,0,0" Text="Packaging" />
-                            </StackPanel>
-                        </hc:TabItem.Header>
-                        <sp:PackagingSettingsView />
-                    </hc:TabItem>
-                    <hc:TabItem x:Name="IntegrationsTabItem" IsSelected="True">
-                        <hc:TabItem.Header>
-                            <StackPanel Orientation="Horizontal">
-                                <iconPacks:PackIconCodicons Kind="Code" />
-                                <TextBlock Margin="10,0,0,0" Text="Integrations" />
-                            </StackPanel>
-                        </hc:TabItem.Header>
-                        <sp:IntegrationsSettingsView />
-                    </hc:TabItem>
-                </hc:TabControl>
-            </hc:TransitioningContentControl>
 
             <!--
                 desktop notif
@@ -108,84 +47,72 @@
                 uncooked depo path
             -->
 
-
             <syncfusion:SfAccordion
-             x:Name="SfAccordion"
-             VerticalAlignment="Stretch"
-             Background="{DynamicResource RegionBrush}"
-             AccentBrush="{DynamicResource AccentBrush}"
-             IsTextSearchEnabled="True"
-             Visibility="Visible"
-             >
+                x:Name="SfAccordion"
+                VerticalAlignment="Stretch"
+                AccentBrush="{DynamicResource AccentBrush}"
+                Background="{DynamicResource RegionBrush}"
+                IsTextSearchEnabled="True"
+                Visibility="Visible">
                 <syncfusion:SfAccordionItem Header="General" Unselected="SfAccordionItem_Unselected">
-                    
+
                     <StackPanel Orientation="Vertical">
                         <syncfusion:PropertyGrid
-                         x:Name="GeneralSettingsPG"
-                         CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
+                            x:Name="GeneralSettingsPG"
+                            CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
                             EnableGrouping="True"
-                         SelectedObject="{Binding generalSettingsPGModel}"
-                         SortDirection="{x:Null}"
-                         />
+                            SelectedObject="{Binding generalSettingsPGModel}"
+                            SortDirection="{x:Null}" />
                         <TextBlock
-                         Margin="5"
-                         HorizontalAlignment="Center"
-                         Foreground="Gray"
-                         Text="Theme changes will take affect after restart."
-                         />
+                            Margin="5"
+                            HorizontalAlignment="Center"
+                            Foreground="Gray"
+                            Text="Theme changes will take affect after restart." />
                     </StackPanel>
-
                 </syncfusion:SfAccordionItem>
 
-                <syncfusion:SfAccordionItem Header="Editor">
+                <syncfusion:SfAccordionItem Header="Editor" Visibility="Collapsed">
                     <syncfusion:PropertyGrid
-                     x:Name="EditorSettingsPG"
-                     EnableGrouping="True"
-                     SelectedObject="{Binding EditorSettingsPGModel}"
-                     CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
-                     />
+                        x:Name="EditorSettingsPG"
+                        CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
+                        EnableGrouping="True"
+                        SelectedObject="{Binding EditorSettingsPGModel}" />
                 </syncfusion:SfAccordionItem>
 
-                <syncfusion:SfAccordionItem Header="Tools">
+                <syncfusion:SfAccordionItem Header="Tools" Visibility="Collapsed">
                     <syncfusion:PropertyGrid
-                     x:Name="ToolsSettingsPG"
-                     EnableGrouping="True"
-                     SelectedObject="{Binding ToolSettingsPGModel}"
-                     />
+                        x:Name="ToolsSettingsPG"
+                        EnableGrouping="True"
+                        SelectedObject="{Binding ToolSettingsPGModel}" />
                 </syncfusion:SfAccordionItem>
 
                 <syncfusion:SfAccordionItem Header="Cyberpunk 2077">
                     <StackPanel>
                         <syncfusion:PropertyGrid
-                         x:Name="CP77SettingsPG"
-                         EnableGrouping="True"
-                         SelectedObject="{Binding cp77SettingsPGModel}"
-                         CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
-                         />
+                            x:Name="CP77SettingsPG"
+                            CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
+                            EnableGrouping="True"
+                            SelectedObject="{Binding cp77SettingsPGModel}" />
                     </StackPanel>
                 </syncfusion:SfAccordionItem>
 
-                <syncfusion:SfAccordionItem Header="The Witcher 3">
+                <syncfusion:SfAccordionItem Header="The Witcher 3" Visibility="Collapsed">
                     <syncfusion:PropertyGrid
-                     x:Name="TW3SettingsPG"
-                     EnableGrouping="True"
-                     SelectedObject="{Binding tw3SettingsPGModel}"
-                     CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
-                     />
+                        x:Name="TW3SettingsPG"
+                        CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
+                        EnableGrouping="True"
+                        SelectedObject="{Binding tw3SettingsPGModel}" />
                 </syncfusion:SfAccordionItem>
-
             </syncfusion:SfAccordion>
-
         </Grid>
         <hc:TransitioningContentControl TransitionMode="Left2RightWithFade">
             <hc:SearchBar
-             x:Name="settingsSearch"
-             Margin="200,40,200,0"
-             HorizontalAlignment="Stretch"
-             VerticalAlignment="Top"
-             BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
-             IsRealTime="True"
-             >
+                x:Name="settingsSearch"
+                Margin="200,40,200,0"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Top"
+                BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
+                IsRealTime="True">
                 <hc:Interaction.Triggers>
                     <hc:EventTrigger EventName="SearchStarted">
                         <hc:EventToCommand Command="{Binding SearchStartedCommand}" PassEventArgsToCommand="True" />
@@ -196,38 +123,34 @@
         <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
 
             <StackPanel
-             Margin="5"
-             HorizontalAlignment="Right"
-             VerticalAlignment="Top"
-             Orientation="Horizontal"
-             >
+                Margin="5"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                Orientation="Horizontal">
 
                 <TextBlock
-                 HorizontalAlignment="Center"
-                 VerticalAlignment="Center "
-                 FontSize="20"
-                 Text="Settings"
-                 />
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center "
+                    FontSize="20"
+                    Text="Settings" />
                 <hc:Divider
-                 Height="45"
-                 Margin="15"
-                 HorizontalAlignment="Center"
-                 VerticalAlignment="Center"
-                 Orientation="Vertical"
-                 />
+                    Height="45"
+                    Margin="15"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Orientation="Vertical" />
                 <hc:AnimationPath
-                 Width="45"
-                 Height="45"
-                 Margin="5"
-                 HorizontalAlignment="Center"
-                 VerticalAlignment="Center"
-                 Data="{DynamicResource SettingsGeo}"
-                 PathLength="30"
-                 Stretch="Uniform"
-                 Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                 StrokeThickness="1.5"
-                 Duration="00:00:06"
-                 />
+                    Width="45"
+                    Height="45"
+                    Margin="5"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Data="{DynamicResource SettingsGeo}"
+                    PathLength="30"
+                    Stretch="Uniform"
+                    Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                    StrokeThickness="1.5"
+                    Duration="00:00:06" />
             </StackPanel>
         </hc:TransitioningContentControl>
     </Grid>
