--- a/WolvenKit/Views/Wizards/FirstSetupWizard/CreateUserView.xaml
+++ b/WolvenKit/Views/Wizards/FirstSetupWizard/CreateUserView.xaml
@@ -39,36 +39,36 @@
                              x:Name="NameTb"
                              Margin="0,32,0,0"
                              HorizontalAlignment="Stretch"
-                             hc:InfoElement.Necessary="True"
                              hc:InfoElement.Title="Author"
                              hc:InfoElement.TitlePlacement="Left"
                              hc:InfoElement.TitleWidth="140"
-                             Style="{StaticResource TextBoxExtendCustom}"
+                             Style="{StaticResource TextBoxExtend}"
                              Text="{Binding Author}"
                              TextChanged="Field_TextChanged" />
+
                             <hc:TextBox
                              x:Name="EmailTb"
                              Margin="0,32,0,0"
                              HorizontalAlignment="Stretch"
-                             hc:InfoElement.Necessary="True"
                              hc:InfoElement.Title="Email"
                              hc:InfoElement.TitlePlacement="Left"
                              hc:InfoElement.TitleWidth="140"
-                             Style="{StaticResource TextBoxExtendCustom}"
+                             Style="{StaticResource TextBoxExtend}"
                              Text="{Binding Email}"
                              TextChanged="Field_TextChanged"
                              VerifyFunc="IsValidEmail" />
+
                             <hc:TextBox
                              x:Name="DonateTb"
                              Margin="0,32,0,0"
                              HorizontalAlignment="Stretch"
-                             hc:InfoElement.Necessary="True"
                              hc:InfoElement.Title="Donate Link"
                              hc:InfoElement.TitlePlacement="Left"
                              hc:InfoElement.TitleWidth="140"
-                             Style="{StaticResource TextBoxExtendCustom}"
+                             Style="{StaticResource TextBoxExtend}"
                              Text="{Binding DonateLink}"
                              TextChanged="Field_TextChanged" />
+
                             <hc:TextBox
                              Height="100"
                              Margin="0,32,10,0"
