uncomment and collapse instead

--- a/WolvenKit/Views/Wizards/FirstSetupWizard/FinalizeSetupView.xaml
+++ b/WolvenKit/Views/Wizards/FirstSetupWizard/FinalizeSetupView.xaml
@@ -41,11 +41,12 @@
 
                         <StackPanel>
 
-                            <!--<hc:Divider
+                            <hc:Divider
+                                Visibility="Collapsed"
                              Margin="0,32,10,0"
                              HorizontalContentAlignment="Left"
                              Content="User" />
-                            <Grid Margin="5,32,10,0">
+                            <Grid Margin="5,32,10,0" Visibility="Collapsed">
 
                                 <TextBlock VerticalAlignment="Center">
                                     <Run Text="Created user" />
@@ -64,7 +65,7 @@
                                  Margin="205,0,0,5"
                                  VerticalAlignment="Bottom"
                                  Text="{Binding Author}" />
-                            </Grid>-->
+                            </Grid>
 
                             <hc:Divider
                              Margin="0,32,10,0"
@@ -91,7 +92,7 @@
                              HorizontalContentAlignment="Left"
                              Content="Initial preferences" />
 
-                            <!--<Grid Margin="5,32,10,0">
+                            <Grid Margin="5,32,10,0" Visibility="Collapsed">
 
                                 <TextBlock VerticalAlignment="Center" Text="Games" />
                                 <TextBox
@@ -100,8 +101,8 @@
                                  VerticalAlignment="Stretch"
                                  IsEnabled="False"
                                  Text="{Binding SelectedGames}" />
-                            </Grid>-->
-                            <!--<Grid Margin="5,32,10,0">
+                            </Grid>
+                            <Grid Margin="5,32,10,0" Visibility="Collapsed">
 
                                 <TextBlock VerticalAlignment="Center" Text="Auto-install mods" />
                                 <TextBox
@@ -110,7 +111,7 @@
                                  VerticalAlignment="Stretch"
                                  IsEnabled="False"
                                  Text="{Binding AutoInstallMods}" />
-                            </Grid>-->
+                            </Grid>
                             <Grid Margin="5,32,10,0">
 
                                 <TextBlock VerticalAlignment="Center" Text="Show guided tour" />
@@ -126,7 +127,7 @@
                              Margin="0,32,10,0"
                              HorizontalContentAlignment="Left"
                              Content="Game Data" />
-                            <!--<StackPanel Visibility="{Binding CreateModForW3, Converter={StaticResource Boolean2VisibilityConverter}}">
+                            <StackPanel Visibility="{Binding CreateModForW3, Converter={StaticResource Boolean2VisibilityConverter}}">
                                 <Grid Margin="5,32,10,0">
 
                                     <TextBlock VerticalAlignment="Center" Text="TW3 executable path" />
@@ -157,7 +158,7 @@
                                      IsEnabled="False"
                                      Text="{Binding DepotPath}" />
                                 </Grid>
-                            </StackPanel>-->
+                            </StackPanel>
                             <StackPanel Visibility="{Binding CreateModForCP77, Converter={StaticResource Boolean2VisibilityConverter}}">
                                 <Grid Margin="5,32,10,0">
 
