--- a/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
@@ -63,11 +63,23 @@
                             EnableGrouping="True"
                             SelectedObject="{Binding generalSettingsPGModel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             SortDirection="{x:Null}" />
-                        <TextBlock
+
+                        <StackPanel
                             Margin="5"
-                            HorizontalAlignment="Center"
-                            Foreground="Gray"
-                            Text="Theme changes will take affect after restart." />
+                            HorizontalAlignment="Right"
+                            Orientation="Horizontal">
+                            <TextBlock
+                                Margin="5"
+                                HorizontalAlignment="Center"
+                                Foreground="{DynamicResource MahApps.Brushes.AccentBase}"
+                                Text="Theme changes will take affect after restart." />
+                            <Button
+                                x:Name="ExitRestart"
+                                Click="ExitRestart_Click"
+                                Content="Exit and Restart" />
+
+                        </StackPanel>
+
                     </StackPanel>
                 </syncfusion:SfAccordionItem>
 
