--- a/WolvenKit/Views/HomePage/Pages/WelcomePageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/WelcomePageView.xaml
@@ -505,8 +505,8 @@
                 ShowHeader="False">
                 <syncfusion:CardView.HeaderTemplate>
                     <DataTemplate>
-                        <Border Margin="-9,-9,-9,-9" Background="{DynamicResource MahApps.Brushes.Accent4}">
-                            <Border Background="{StaticResource CloudDrawingBrushMain}">
+                        <Border Margin="-7,-9,-7,-9" Background="{DynamicResource MahApps.Brushes.Accent4}">
+                            <Border Margin="0" Background="{StaticResource CloudDrawingBrushMain}">
 
                                 <Grid Height="50">
                                     <StackPanel Orientation="Horizontal">
@@ -550,10 +550,11 @@
 
                         <StackPanel Orientation="Horizontal">
                             <Border
-                                Width="195"
+                                Width="196"
+                                Margin="0,0,0,0"
                                 Background="{DynamicResource RegionBrush}"
-                                BorderBrush="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}"
-                                BorderThickness="1,0,1,1"
+                                BorderBrush="{DynamicResource MahApps.Brushes.Accent4}"
+                                BorderThickness="2,0,2,2"
                                 CornerRadius="0,0,4,4">
 
                                 <Grid>
