--- a/WolvenKit/Views/Editor/Basic/PropertiesView.xaml
+++ b/WolvenKit/Views/Editor/Basic/PropertiesView.xaml
@@ -555,6 +555,8 @@
                                         <RowDefinition Height="2*" />
                                         <RowDefinition Height="50" />
                                     </Grid.RowDefinitions>
+
+                                    <TextBlock Text="{Binding ChannelLength}" />
                                     <Border
                                         Grid.Row="3"
                                         Width="auto"
@@ -578,7 +580,7 @@
                                                     hc:IconElement.Geometry="{DynamicResource AudioPlay}"
                                                     Background="Transparent"
                                                     BorderBrush="Transparent"
-                                                    Click="PlayButton_Click"
+                                                    Command="{Binding PlayAudioCommand}"
                                                     Effect="{StaticResource MahApps.DropShadowEffect.Menu}"
                                                     Style="{StaticResource ButtonIcon}" />
                                                 <hc:Divider
@@ -593,7 +595,7 @@
                                                     hc:IconElement.Geometry="{DynamicResource AudioPause}"
                                                     Background="Transparent"
                                                     BorderBrush="Transparent"
-                                                    Click="PauseButton_Click"
+                                                    Command="{Binding PauseAudioCommand}"
                                                     Effect="{StaticResource MahApps.DropShadowEffect.Menu}"
                                                     Style="{StaticResource ButtonIcon}" />
                                                 <hc:Divider
@@ -608,7 +610,7 @@
                                                     hc:IconElement.Geometry="{DynamicResource AudioStop}"
                                                     Background="Transparent"
                                                     BorderBrush="Transparent"
-                                                    Click="StopButton_Click"
+                                                    Command="{Binding StopAudioCommand}"
                                                     Effect="{StaticResource MahApps.DropShadowEffect.Menu}"
                                                     Style="{StaticResource ButtonIcon}" />
                                                 <hc:Divider
@@ -622,16 +624,19 @@
                                                     BorderThickness="1"
                                                     CornerRadius="5"
                                                     Effect="{StaticResource MahApps.DropShadowEffect.Menu}">
-                                                    <svl1:DigitalClock
-                                                        x:Name="clockDisplay"
-                                                        Grid.Row="1"
-                                                        Grid.ColumnSpan="2"
-                                                        Margin="5"
-                                                        HorizontalAlignment="Right"
-                                                        Effect="{StaticResource MahApps.DropShadowEffect.Menu}"
-                                                        ShowHours="True"
-                                                        ShowSubSeconds="False"
-                                                        Time="{Binding ChannelPosition}" />
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <svl1:DigitalClock
+                                                            x:Name="clockDisplay"
+                                                            Grid.Row="1"
+                                                            Grid.ColumnSpan="2"
+                                                            Margin="5"
+                                                            HorizontalAlignment="Right"
+                                                            Effect="{StaticResource MahApps.DropShadowEffect.Menu}"
+                                                            ShowHours="True"
+                                                            ShowSubSeconds="False"
+                                                            Time="{Binding ChannelPosition}" />
+                                                        <hc:Divider Width="2" Orientation="Vertical" />
+                                                    </StackPanel>
                                                 </Border>
                                             </StackPanel>
                                         </Grid>
